refactor: BookFixture로 테스트 코드 중복 코드 줄이기